fix contur overflow

--- a/css/projects/contur-nedefinit.css
+++ b/css/projects/contur-nedefinit.css
@@ -53,6 +53,7 @@ p {
     height: 100%;
     width: 100%;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .title-svg {
